--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
     "toc": "markdown-toc README.md -i --bullets=-",
     "lint": "awesome-lint"
   },
-  "dependencies": {
-    "markdown-toc": "^1.1.0"
-  },
   "devDependencies": {
+    "markdown-toc": "^1.1.0",
     "awesome-lint": "^0.12.1"
   }
 }
