--- a/.github/workflows/doctoc.yml
+++ b/.github/workflows/doctoc.yml
@@ -24,11 +24,11 @@ jobs:
       run: |
         git diff --exit-code README.md # if README.md was modified, it returns 1 (failure). If it wasn't modified, it returns 0 (success)
 
+      # if: steps.check-changes.outcome == 'failure'
     - name: Commit and Push Changes
-      if: steps.check-changes.outcome == 'failure'
       run: |
         git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com" # you can use actions@github.com as the email address in the git config for GitHub Actions workflows. This email address is commonly used in automated workflows, and GitHub recognizes it as a generic or default email address associated with actions.
+        git config --global user.email "actions@github.com"
         git add README.md
         git commit -m "Update Table of Contents"
         git push
